recursion.cons.concat.Concat.scala.error
Erreur de compilation :
Concat:6: error: recursive method aux needs result type
      case h::q => aux(q, l2, h::r)
                   ^