recursion.cons.concat.Concat.scala.code
def concat(l1:List[Int], l2:List[Int]): List[Int] = {
  def aux (l1:List[Int], l2:List[Int], r:List[Int]) = {
    l1 match {
      case Nil => r
      case h::q => aux(q, l2, h::r)
    }
  }
  aux(l1,l2,Nil)
}